# comic_splitter

./: .gitignore  Cargo.toml  README.md  splitter.py  test.sh  watch.sh
src/: main.rs  splitter.rs
